fix messages overflow

--- a/frontend/public/stylesheets/messenger.css
+++ b/frontend/public/stylesheets/messenger.css
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     overflow: hidden;
+    height: 100vh;
 }
 
 .fas fa-fire {
@@ -27,6 +28,7 @@
 .messages-form {
     position: relative;
     height: 100vh;
+    /* height: 100%; */
 }
 
 .message-avatar {
